--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+**As fix for MT7610E was marged to upstream master branch, there is no reason to use this outdated version**
+
+
 This is the buildsystem for the LEDE Linux distribution.
 
 Please use "make menuconfig" to choose your preferred
